--- a/src/templates/instructor/rounds.html
+++ b/src/templates/instructor/rounds.html
@@ -149,7 +149,7 @@
 
 {% include '/instructor/rounds_discussion_card.html' %}
 
-</div> <!-- END ./div class=card for Discussion Block -->
+</div> <!-- END OF DISCUSSION BLOCK -->
 
 
 <!-- START OF SUMMARY QUESTION BLOCK-->
@@ -231,11 +231,29 @@
                 </button>
             </div>
         </div>
-        {% endif%}
         {% endif %}
-    </div>
+        {% endif %}
+<!-- START OF PREVIEW BLOCK-->
+<div class="card">
+<div class="card-title">
+    <h4>Preview</h4>
+</div>
+<div class="card-body">
+
+<button type="button" class="btn btn-default" id="previewRounds" style=""
+        aria-label="Preview">
+    <span aria-hidden="true"></span> Preview
+</button>
+
+</div>
+</div>
+<!-- END OF PREVIEW BLOCK-->
+</div>
+
+
 </div>
 <!-- END OF SUMMARY BLOCK-->
+
 
 {#
 # Modals
@@ -426,6 +444,49 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" id="submitEmail">Activate & Send</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+{# Preview Rounds Modal #}
+<div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="previewModalLabel">Notification Email Message</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" id="previewModalForm" method="post" style="text-align: center;"
+                      action="/rounds">
+                    <input type="hidden" name="course" value="{{selectedCourse}}" />
+                    <input type="hidden" name="section" value="{{selectedSection}}" />
+                    <input type="hidden" name="action" value="start" />
+
+                    <div class="form-group">
+                        <label for="subject" class="col-sm-2 control-label">Subject</label>
+                        <div class="col-sm-10">
+                            <input id="subject" class="form-control" name="subject" required="true" value="CONSIDER rounds have begun" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="col-sm-2 control-label">Message</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="3" id="inputEditEmailMessage"
+                                      name="message"
+                                      required>The initial submission for CONSIDER has begun. Please visit the following link to submit your answer: http://go.osu.edu/consider</textarea>
+                        </div>
+                    </div>
+                    <button type="submit" class="hide"></button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="advance">Next Timestep</button>
             </div>
         </div>
     </div>
