Add initial and summary questions to single and multi show responses view

--- a/src/templates/instructor/show_multi_html_responses.html
+++ b/src/templates/instructor/show_multi_html_responses.html
@@ -2,6 +2,36 @@
 {% block title %} | Responses {% endblock %}
 {% block content %}
 
+<button class="accordion">Initial Question</button>
+<div class="panel">
+  <p>{{initial_question}}</p>
+</div>
+
+<button class="accordion">Summary Question</button>
+<div class="panel">
+  <p>{{summary_question}}</p>
+</div>
+
+<script>
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function(){
+            /* Toggle between adding and removing the "active" class,
+            to highlight the button that controls the panel */
+            this.classList.toggle("active");
+
+            /* Toggle between hiding and showing the active panel */
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        }
+    }
+</script>
 {% if not posts %}
     {% for group in groups %}
         <!-- Rounds -->
