Finished with some error checking done. See description for changes.
Preview control moved to Rounds page due to the fact that all rounds > 1
& < final are identical and this eases the use of templates, makes whole
solution more dynamic to changes on student side.

--- a/src/templates/instructor/rounds.html
+++ b/src/templates/instructor/rounds.html
@@ -240,9 +240,14 @@
 </div>
 <div class="card-body">
 
-<button type="button" class="btn btn-default" id="previewRounds" style=""
+<button type="button" class="btn btn-default" id="previewRound1" style=""
         aria-label="Preview">
-    <span aria-hidden="true"></span> Preview
+    <span aria-hidden="true"></span> Preview First Round
+</button>
+
+    <button type="button" class="btn btn-default" id="previewRound2" style="margin-left:10px;"
+        aria-label="Preview">
+    <span aria-hidden="true"></span> Preview Final Round
 </button>
 
 </div>
