--- a/src/templates/layouts/student_base.html
+++ b/src/templates/layouts/student_base.html
@@ -10,7 +10,7 @@
 {{ super() }}
 {% for i in range(0,rounds) %}
 <li class="{% if curr_page == i+1 %}nav-active round-viewing{% else %}nav-hover{% endif %}">
-<a href="/student_rounds?section={{sectionKey}}&round={{i+1}}" data-round="{{i+1}}" class="nav_reload">{{ round_names[i] }}</a>
+<a href="/student_rounds?assignment={{assignmentKey}}&round={{i+1}}" data-round="{{i+1}}" class="nav_reload">{{ round_names[i] }}</a>
 </li>
 {% endfor %}
 {% endblock topnavbar %}
@@ -32,7 +32,7 @@
 
 
 {% block script %}
-<meta id="reload" data-currentPage = "{{ curr_page }}" data-sectionkey = "{{sectionKey}}">
+<meta id="reload" data-currentPage = "{{ curr_page }}" data-assignmentkey = "{{assignmentKey}}">
 <script type="text/javascript" src="/js/layouts/student_base_dynamic_reload.js"></script>
 {% if not expired -%}
 <script src="/js/jquery.countdown.min.js"></script>
