--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -18,7 +18,7 @@ understanding of the code for graders.
 
 <div class="card">
 <div class="card-title">
-<h4 class="form-signin-heading">Please select a Course and Section below</h4>
+<h4 class="form-signin-heading">Please select a Course and Assignment below</h4>
 </div>
 <div class="card-body">
 <div class="row">
@@ -35,18 +35,18 @@ understanding of the code for graders.
         {% endif %}
     </div>
     <div class="col-md-6">
-        <h4>Section</h4>
-        {% if sections %}
-        <select id="sectionSelector" class="form-control">
-            {% for section in sections %}
-            <option {% if selectedSection== section.name %}selected="selected" {% endif %}>{{section.name}}</option>
+        <h4>Assignment</h4>
+        {% if assignments %}
+        <select id="assignmentSelector" class="form-control">
+            {% for assignment in assignments %}
+            <option {% if selectedAssignment== assignment.name %}selected="selected" {% endif %}>{{assignment.name}}</option>
             {% endfor %}
         </select>
         {% else %}
         {% if courses %}
-        There are no sections in this Course
+        There are no assignments in this Course
         {% else %}
-        Please select a course to see sections
+        Please select a course to see assignments
         {% endif %}
         {% endif %}
     </div>
@@ -61,13 +61,13 @@ understanding of the code for graders.
         aria-label="Add Graders">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Graders
 </button>
-{% if sections %}
+{% if assignments %}
 {% if students %}
 
 <div class="card">
 <div class="card-title">
-<h4>Students already enrolled {% if selectedCourse and selectedSection -%} in Section
-    {{selectedSection}} of Course {{selectedCourse}} {%- endif %} {% if students -%}
+<h4>Students already enrolled {% if selectedCourse and selectedAssignment -%} in Assignment
+    {{selectedAssignment}} of Course {{selectedCourse}} {%- endif %} {% if students -%}
     ({{students|length}}) {%- endif -%}</h4>
 </div>
 <div class="card-body">
@@ -102,13 +102,13 @@ understanding of the code for graders.
 {% endif %}
 {% endif %}
 
-{% if sections %}
+{% if assignments %}
 {% if graders %}
 
 <div class="card">
 <div class="card-title">
-<h4>Graders already enrolled {% if selectedCourse and selectedSection -%} in Section
-    {{selectedSection}} of Course {{selectedCourse}} {%- endif %} {% if graders -%}
+<h4>Graders already enrolled {% if selectedCourse and selectedAssignment -%} in Assignment
+    {{selectedAssignment}} of Course {{selectedCourse}} {%- endif %} {% if graders -%}
     ({{graders|length}}) {%- endif -%}</h4>
 </div>
 <div class="card-body">
@@ -145,7 +145,7 @@ understanding of the code for graders.
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add Students for {{selectedSection}} of
+                <h4 class="modal-title" id="myModalLabel">Add Students for {{selectedAssignment}} of
                     {{selectedCourse}}</h4>
             </div>
             <div class="modal-body">
@@ -191,7 +191,7 @@ understanding of the code for graders.
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabelGrader">Add Graders for {{selectedSection}} of
+                <h4 class="modal-title" id="myModalLabelGrader">Add Graders for {{selectedAssignment}} of
                     {{selectedCourse}}</h4>
             </div>
             <div class="modal-body">
@@ -220,7 +220,7 @@ understanding of the code for graders.
 {% endblock %}
 
 {% block script %}
-  <meta id="list-students" data-course="{{selectedCourse}}" data-section="{{selectedSection}}">
+  <meta id="list-students" data-course="{{selectedCourse}}" data-assignment="{{selectedAssignment}}">
   <script type="text/javascript" src="/js/instructor/list_students.js" ></script>
 
 {% endblock %}
