--- a/src/templates/instructor/responses.html
+++ b/src/templates/instructor/responses.html
@@ -6,7 +6,7 @@
 
 <div class="card">
 <div class="card-title">
-<h4 class="form-signin-heading">Please select a Course and Section below</h4>
+<h4 class="form-signin-heading">Please select a Course and Assignment below</h4>
 </div>
 <div class="card-body">
 <div class="row">
@@ -23,18 +23,18 @@
         {% endif %}
     </div>
     <div class="col-md-6">
-        <h4>Section</h4>
-        {% if sections %}
-        <select id="sectionSelector" class="form-control">
-            {% for section in sections %}
-            <option {% if selectedSection== section.name %}selected="selected" {% endif %}>{{section.name}}</option>
+        <h4>Assignment</h4>
+        {% if assignments %}
+        <select id="assignmentSelector" class="form-control">
+            {% for assignment in assignments %}
+            <option {% if selectedAssignment== assignment.name %}selected="selected" {% endif %}>{{assignment.name}}</option>
             {% endfor %}
         </select>
         {% else %}
         {% if courses %}
-        There are no sections in this Course
+        There are no assignments in this Course
         {% else %}
-        Please select a course to see sections
+        Please select a course to see assignments
         {% endif %}
         {% endif %}
     </div>
@@ -46,7 +46,7 @@
 
 <div class="card">
 <div class="card-title">
-<h4>Responses from {{selectedSection}}</h4>
+<h4>Responses from {{selectedAssignment}}</h4>
 </div>
 <div class="card-body">
 <div role="tabpanel">
@@ -124,7 +124,7 @@
     </div>
 </div>
 {% else %}
-<h5 class="sub-header" style="margin-top: 20px;">No rounds exists for this section.</h5>
+<h5 class="sub-header" style="margin-top: 20px;">No rounds exists for this assignment.</h5>
 {% endif %}
 </div>
 </div>
