--- a/src/templates/instructor/show_responses.html
+++ b/src/templates/instructor/show_responses.html
@@ -5,7 +5,7 @@
 <h1 class="page-header">Show Responses</h1>
 <div class="card">
 <div class="card-title">
-<h4 class="form-signin-heading">Please select a Course and Section below:</h4>
+<h4 class="form-signin-heading">Please select a Course and Assignment below:</h4>
 </div>
 <div class="card-body">
 <div class="row">
@@ -22,18 +22,18 @@
         {% endif %}
     </div>
     <div class="col-md-6">
-        <h4>Section</h4>
-        {% if sections %}
-        <select id="sectionSelector" class="form-control">
-            {% for section in sections %}
-            <option {% if selectedSection== section.name %}selected="selected" {% endif %}>{{section.name}}</option>
+        <h4>Assignment</h4>
+        {% if assignments %}
+        <select id="assignmentSelector" class="form-control">
+            {% for assignment in assignments %}
+            <option {% if selectedAssignment== assignment.name %}selected="selected" {% endif %}>{{assignment.name}}</option>
             {% endfor %}
         </select>
         {% else %}
         {% if courses %}
-        There are no sections in this Course
+        There are no assignments in this Course
         {% else %}
-        Please select a course to see sections
+        Please select a course to see assignments
         {% endif %}
         {% endif %}
     </div>
@@ -73,17 +73,17 @@
     <div class="form-group" style="text-align:center;">
 
         <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px" id="singleHTML"
-                onclick="exportSingleColumnHtml('{{ selectedCourse }}','{{ selectedSection }}')">
+                onclick="exportSingleColumnHtml('{{ selectedCourse }}','{{ selectedAssignment }}')">
             Single Column HTML
         </button>
 
         <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px" id="multiHTML"
-                onclick="exportMultiColumnHtml('{{ selectedCourse }}','{{ selectedSection }}')">
+                onclick="exportMultiColumnHtml('{{ selectedCourse }}','{{ selectedAssignment }}')">
             Multi Column HTML
         </button>
 
         <button class="label label-success" style="width:100px;height:35px;font-size:15px" id="fileHTML"
-                onclick="exportData('{{ selectedCourse }}','{{ selectedSection }}')">
+                onclick="exportData('{{ selectedCourse }}','{{ selectedAssignment }}')">
             FILE
         </button>
     </div>
