--- a/src/templates/students/round.html
+++ b/src/templates/students/round.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<meta id="student-round" data-option="{{option}}" data-expired="{{expired}}" data-last = "{{last_round}}" data-sectionKey = "{{sectionKey}}">
+<meta id="student-round" data-option="{{option}}" data-expired="{{expired}}" data-last = "{{last_round}}" data-assignmentKey = "{{assignmentKey}}">
 <script type="text/javascript" src="/js/students/round.js"></script>
 {{ super() }}
 <script src="/ckeditor/ckeditor.js"></script>
